--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-jwt": "^5.3.3",
         "express-validator": "^6.4.0",
