--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "license": "ISC",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-jwt": "^5.3.3",
         "express-validator": "^6.4.0",
         "formidable": "^1.2.2",
+        "helmet": "^3.22.0",
         "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.15",
         "mongoose": "^5.9.10"
     }
 }
